Changed title and disabled highlighting

--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@ canvas {
     background-image: url("img/background_small.png");
     background-repeat: no-repeat;
 }
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
