--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ canvas {
     */
     background-repeat: no-repeat;
 }
+#background {
+    position: absolute;
+    top: 50px;
+    right: 10px;
+}
 
 td {
     text-align: center;
